--- a/3-4/index.html
+++ b/3-4/index.html
@@ -5,12 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>2章チェックテスト</h1>
     <!--名前を入力してquestion.phpに移動するフォームを作成-->
-    <form action="question.php" method="post"> 
+    <form action="question.php" method="post"> </form>
     <input type="text" placeholder="名前を入力してください">
+    <input type="submit" value="テスト開始" >
 </body>
 </html>
