--- a/3-4/index.html
+++ b/3-4/index.html
@@ -11,7 +11,7 @@
     <h1>2章チェックテスト</h1>
     <!--名前を入力してquestion.phpに移動するフォームを作成-->
     <form action="question.php" method="post"> </form>
-    <input type="text" placeholder="名前を入力してください">
+    <input type="text" placeholder="名前を入力してください" name="name">
     <input type="submit" value="テスト開始" >
 </body>
 </html>
